--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bonfida/spl-name-service": "^2.3.6",
     "@solana-developers/helpers": "^1.5.1",
     "@solana/web3.js": "^1.90.0",
     "esrun": "^3.2.26",
